# portly

./: .gitignore  Arch.md  LICENSE  NeedFix.md  PublicBeta.md  README.md  TestCoverage.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vitest.config.ts
.agent/workflows/: dev.md
.github/workflows/: ci.yml  release.yml
scripts/: network-lan-precheck.mjs
src/: error-utils.ts  main.dom.test.ts  main.test.ts  main.ts  network-utils.ts  scan-ui-state.ts  setupTests.ts  styles.css  ui-feedback.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: advanced_scan.rs  app_error.rs  command_exec.rs  core.rs  dns.rs  docker.rs  export.rs  lib.rs  main.rs  network.rs  process.rs  ssl.rs  whois.rs
tests/integration/: dataExport.integration.test.ts  dnsQuery.integration.test.ts  network-lan.e2e.test.ts  network-progress.integration.test.ts  portScanning.integration.test.ts  sslCertificate.integration.test.ts  whois.integration.test.ts
