[package]
name = "portly"
version = "0.2.2"
description = "Portly - 跨平台端口扫描器 / Cross-platform port scanner"
authors = ["kanshan"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kanshan/portly"
default-run = "portly"

[lib]
name = "portly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "portly"
path = "src/main.rs"

[[bin]]
name = "portly-cli"
path = "src/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["net", "time", "rt-multi-thread", "sync"] }
local-ip-address = "0.6"
pnet = "0.35"

[dev-dependencies]
local-ip-address = "0.6"
